[package]
name = "most-recent-file"
version = "0.1.0"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
edition = "2018"
description = "Select the most recent file from a bunch of options"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
clap = { version = "2.33.3", features = ["color"] }
const_format = { version = "0.2.14", features = ["const_generics"] }
ignore = "0.4.18"
itertools = "0.10.1"
rayon = "1.5.1"
structopt = "0.3.22"
thiserror = "1.0.26"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
