[package]
name = "most-recently"
version = "0.1.0"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
edition = "2018"
license = "MIT"
description = "Select the most recently modified (etc...) file or directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
clap = { version = "2.33.3", features = ["color"] }
itertools = "0.10.1"
strum = { version = "0.21.0", features = ["derive"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
